Revision history for Perl extension Module::Build.

 - Some large VMS fixes, mostly having to do with the non-case-
   preserving nature of most VMS filesystems, but also correcting for
   illegal characters in VMS file specs. [John E. Malmberg and Craig
   A. Berry]

 - We now use a much more reliable method when Data::Dumper-ing saved
   state data to the _build/ directory. [Yves]

 - When a module had 0.000 as its version, a few places in the code
   thought the module had no version at all.  This is now
   fixed. [Andrew "Zefram" Main]

 - When finding the default set of script_files, we now compute them
   as relative paths, not absolute. [Spotted by Curtis "Ovid" Poe]

 - Got rid of a call to eliminate_macros, which isn't needed in
   Module::Build since there is no external make utility involved.
   Override expand_test_dir to make up for the fact that the
   home-grown glob() returns absolute, not relative, paths. [Craig
   A. Berry]

 - Fixed a catdir() that needed to be catfile() in the .packlist
   creation code. [John E. Malmberg]

 - If a *.PL file ended abnormally during the build, processing should
   have stopped, but it didn't.  Fixed. [Matthew Cast and David
   Golden]

 - Module::Build::Compat adds "require 5.XXXXX" to Makefile.PL when 
   'perl' is specified as a 'requires' prerequisite [David Golden]

 - Refactored t/compat.t for modularity and transparency; added 
   labels for all tests; supressed subprocess output to 
   STDOUT and STDERR [David Golden]

 - Fixed bug in perl_version_to_float when version is already a float
   [David Golden]

 - Removed a mention of $build->{config} from the documentation, the
   official interface to Config.pm settings is now via the
   $build->config() and has been for some time. [Suggested by Michael
   Schwern]

 - Tweaked some text in the Cookbook to bring it into the modern age,
   and added a recipe for accessing Config.pm settings. [Ibid]
